# slack-todos

./: .gitignore  README.md  pyproject.toml
slack_todos/: app.py
slack_todos/backends/: __init__.py  slack.py  sql_lite.py  todo_txt.py
slack_todos/server/: serve.py
