[tool.poetry]
name = "slack-todos"
version = "0.1.0"
description = ""
authors = ["shadowcodex <jsduncan98@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_todos"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"
textual = {extras = ["dev"], version = "^0.26.0"}
click = "^8.1.3"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
td = "slack_todos.app:cli"